[package]
name = "luhn3"
version = "1.0.3"
description = "A Luhn validation library"
authors = [
  "Michael Baykov <manpacket@gmail.com>",
]
license = "MIT"
edition = "2018"
repository = "https://github.com/pacak/luhn"
readme = "README.md"
keywords = ["checksum", "luhn", "no_std"]
categories = ["algorithms", "cryptography"]

[dependencies]
